tests/unit/default/syntax-error/043-create-table-parens-name-colon-type-params-null-eq-null.e.t
---- IN ----
+%table(id:decimal(10,2)?=null
---- OUT ----
---- ERR ----
syntax: expected `)` after `...0,2)?=null` instead of EOL at position 30 - at line 1
---- EXIT ----
1
